--- a/Landing_3/index.html
+++ b/Landing_3/index.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="css/media.css">
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900&display=swap" rel="stylesheet">
+    <!-- Icons -->
+    <link rel="stylesheet" href="img/icons/style.css">
+
 </head>
 <body>
 <!-- Header-->
@@ -69,7 +72,7 @@
 </section>
 <!--Watch -->
 <section class="watch" style="background-image: url(img/watch_bg.png)">
-<i></i>
+<i class="icon-play-circle"></i>
 <h3>WATCH OUR STORY</h3>
 </section>
 <!--Expertise-->
@@ -149,8 +152,136 @@
             </div>
         </div>
     </div>
-
 </section>
+<!--Works-->
+<section class="works">
+    <div class="container">
+        <div class="works-wrapper">
+            <h3>OUR WORKS</h3>
+               <a href="#">See All Project in dribbble<i class="icon-arrow_forward_ios"></i></a> 
+        </div>
+    </div>
+</section>
+<!--Employee -->
+<section class="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<img src="img/team-member.jpg" alt="employee" title="employee">
+<div class="link-button">
+    <a href="#" title="Learn more">LOAD MORE</a>
+</div>
+</section>
+<!--Testimonials-->
+<section class="testimonials" style="background-image: url(img/header_background.png)">
+    <div class="container">
+        <h3>“</h3>
+        <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+        <h5>JANE GALADRIEL</h5>
+        <p>CEO TENGKUREP</p>
+        <div class="testimonials-wrapper">
+            <i class="icon-arrow_back_ios"></i>
+            <img src="img/test_1.png" alt="testimonials" title="testimonials one">
+            <img src="img/test_2.png" alt="testimonials" title="testimonials two">
+            <img src="img/test_3.png" alt="testimonials" title="testimonials three">
+            <img src="img/test_4.png" alt="testimonials" title="testimonials four">
+            <img src="img/test_5.png" alt="testimonials" title="testimonials five">
+            <i class="icon-arrow_forward_ios"></i>
+        </div>
+    </div>
+</section>
+<!--Contact-->
+<section class="contact">
+    <div class="container">
+        <div class="contact-wrapper">
+            <div class="contact__form">
+                <h3>GIVE US A GOOD NEWS</h3>
+                <form>
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                    <input type="text" placeholder="Subject">
+                    <textarea class="form-message" rows="10" cols="45" name="text" placeholder="Your Message"></textarea>
+                    <input type="submit" value="Submit" name="submit">
+                </form>
+            </div>
+            <div class="contact__logo">
+                <h3>OUR HAPPY CLIENT</h3>
+                <div class="logo-wrapper">
+                    <div class="logo__column-one">
+                        <img src="img/Zara_Logo.png" alt="Zara_Logo" title="Zara_Logo">
+                        <img src="img/New_York_Logo.png" alt="New_York_Logo" title="New_York_Logo">
+                        <img src="img/Calvin_klein.png" alt="Calvin_klein" title="Calvin_klein">
+                        <img src="img/Converse_logo.png" alt="Converse_logo" title="Converse_logo">
+                        <img src="img/Levi's_logo.png" alt="Levi's_logo" title="Levi's_logo">
+                    </div>
+                    <div class="logo__column-two">
+                        <img src="img/Logo_of_Mango.png" alt="Logo_of_Mango" title="Logo_of_Mango">
+                        <img src="img/Gucci_Logo.png" alt="Gucci_Logo" title="Gucci_Logo">
+                        <img src="img/Logo_NIKE.png" alt="Logo_NIKE" title="Logo_NIKE">
+                        <img src="img/Puma_Logo.png" alt="Puma_Logo" title="Puma_Logo">
+                        <img src="img/Billabong_Logo.png" alt="Billabong_Logo" title="Billabong_Logo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer" style="background-image: url(img/footer_bg.png)">
+    <div class="container">
+        <div class="footer-wrapper">
+            <div class="footer__desc">
+                <div class="header__logo">
+                    <a href ="#" title="logo"><img src="img/logo.png" title="logo"></a>
+                    <p>tajam</p>
+                </div>
+                <p>lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</p>
+            </div>
+            <div class="footer__adress">
+                <h5>OUR STUDIO</h5>
+                <div class="footer__adress-wrapper">
+                    <i class="icon-map-pin"></i>
+                    <p>Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat
+                        11480 - Indonesia</p>
+                </div>
+                <div class="footer__adress-wrapper">
+                    <i class="icon-phone"></i>
+                    <p>(+62) 21-2224 3333</p>
+                </div>
+            </div>
+            <div class="footer-contact">
+                <h5>STAY IN TOUCH</h5>
+                <form>
+                    <input type="email" placeholder="Subscribe our newsletter">
+                    <input type="submit" value="" name="submit">
+                </form>
+                <a href="#" title="facebook"><i class="icon-facebook"></i></a>
+                <a href="#" title="twitter"><i class="icon-twitter"></i></a>
+                <a href="#" title="dribbble"><i class="icon-dribbble"></i></a>
+                <a href="#" title="instagram"><i class="icon-instagram"></i></a>
+                <a href="#" title="google+"><i class="icon-google-plus"></i></a>
+                <a href="#" title="youtube"><i class="icon-youtube"></i></a>
+            </div>
+        </div>
+        <div class="footer__copyright-wrapper">
+            <div class="footer-link">
+                <p><a href="#" title="help">HELP</a></p>
+                <p><a href="#" title="terms & conditions">TERMS & CONDITION</a></p>
+                <p><a href="#" title="privacy">PRIVACY</a></p>  
+            </div>
+            <div class="footer-trademark">
+                <p><a href ="#" title="copyright">Copyright © 2015 - Tajem Creative</a></p>
+            </div>
+        </div>
+    </div>
+</footer>
 </main>
     <script src="js/main.js"></script>
 </body>
