--- a/Landing_3/index.html
+++ b/Landing_3/index.html
@@ -21,9 +21,9 @@
 </head>
 <body>
 <!-- Header-->
-<header class="header" id="header" style="background-image: url(img/header_background.png)">
+<header class="header" style="background-image: url(img/header_background.png)">
     <div class="container">
-        <div class="header-wrapper">
+        <div class="header-wrapper" id="header">
             <div class="header__logo" data-scroll="#intro">
                 <a href ="#" title="logo"><img src="img/logo.png" title="logo"></a>
                 <p>tajam</p>
@@ -38,7 +38,7 @@
                 <a class="nav__link" href="#">Contact</a>
             </nav>   
         </div>
-        <div class="intro">
+        <div class="intro" id="intro">
             <h1>We Are Awesome Creative Agency</h1>
             <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
             <div class="link-button">
@@ -51,7 +51,20 @@
             <span></span>
             <span></span>
         </div>
+        <button class="nav-toggle" id="nav_toggle" type="button">
+            <span class="nav-toggle__item">Menu</span>
+        </button>
     </div>
+    <!-- Mobile Menu -->
+    <nav class="nav-mob" id="nav">
+        <a class="nav__link" href="#">Home</a>
+        <a class="nav__link" href="#">About</a>
+        <a class="nav__link" href="#">Expertise</a>
+        <a class="nav__link" href="#">Team</a>
+        <a class="nav__link" href="#">Works</a>
+        <a class="nav__link" href="#">People Say</a>
+        <a class="nav__link" href="#">Contact</a>
+    </nav> 
 </header>
 <main>
 <!-- Our Story-->
@@ -283,6 +296,9 @@
     </div>
 </footer>
 </main>
-    <script src="js/main.js"></script>
+<!-- JQuery-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!--JS-->
+<script src="js/main.js"></script>
 </body>
 </html>
