--- a/Landing_4/subpage_1.html
+++ b/Landing_4/subpage_1.html
@@ -51,7 +51,7 @@
                 <div class="header__nav">
                     <ul id="toggle">
                         <li><a href="index.html">home</a></li>
-                        <li><a href="#">news</a></li>
+                        <li><a href="subpage_1.html">news</a></li>
                         <li><a href="#">institut</a></li>
                         <li><a href="#">Firmensprachkurse</a></li>
                         <li><a href="#">Sprachkurse</a></li>
@@ -62,7 +62,39 @@
                     </ul>
                 </div>
             </div>
+            
         </div>
+        <!-- Mobile -->
+        <div class="burger-menu">
+            <a href="#" class="burger-menu__button">
+                <span class="burger-menu__lines"></span>
+            </a>
+            <div class="burger-menu__nav">
+                <ul>
+                    <li class="burger-menu__links"><a href="index.html">home</a></li>
+                    <li class="burger-menu__links"><a href="subpage_1.html">news</a></li>
+                    <li class="burger-menu__links"><a href="#">institut</a></li>
+                    <li class="burger-menu__links"><a href="#">Firmensprachkurse</a></li>
+                    <li class="burger-menu__links"><a href="#">Sprachkurse</a></li>
+                    <li class="burger-menu__links"><a href="#">Conversation Club</a></li>
+                    <li class="burger-menu__links"><a href="#">Übersetzungen</a></li>
+                    <li class="burger-menu__links"><a href="#">Kontakt</a></li>
+                    <li class="burger-menu__links"><a href="#">Anfahrt</a></li>
+                </ul>
+                <div class="header__info-address">
+                    <i><span class="icon-home3"></span></i>
+                    <address>Nonnenstraße 5 b in 04229 Leipzig<address>
+                </div>
+                <div class="header__info-tel">
+                    <i><span class="icon-phone"></span></i>
+                    <a href="tel:0341 5290890">0341 5290890</a>
+                </div>
+                <div class="header__info-mail">
+                    <i><span class="icon-envelope"></span></i>
+                    <a href="mailto:info@spracheundwirtschaft.de">info@spracheundwirtschaft.de</a>
+                </div>
+            </div>
+        </div>    
     </div>
 </header>
 
@@ -168,4 +200,6 @@
         </div>
     </div>
 </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
