--- a/Landing_4/index.html
+++ b/Landing_4/index.html
@@ -491,7 +491,7 @@
     </div>
 </section>
 
-<!-- Map -->
+<!-- Footer -->
 <footer class="footer">
     <div class="footer-map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5639.843179638739!2d10.023884700815632!3d53.53523677473264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18e8987c0be99%3A0x7672cf76a7236eb0!2sHoliday%20Inn%20Hamburg!5e0!3m2!1sru!2sua!4v1601026273556!5m2!1sru!2sua" width="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
